@@ -1,5 +1,5 @@
 /*
- * Copyright 2023 the original author or authors.
+ * Copyright 2023-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -56,7 +56,7 @@ public class DefaultPulsarReaderContainerFactory<T>
 	}
 
 	@Override
-	public DefaultPulsarMessageReaderContainer<T> createReaderContainer(String... topics) {
+	public DefaultPulsarMessageReaderContainer<T> createContainer(String... topics) {
 		// TODO
 		return null;
 	}
