@@ -1,5 +1,5 @@
 /*
- * Copyright 2022-2023 the original author or authors.
+ * Copyright 2022-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -138,7 +138,7 @@ public class GenericListenerEndpointRegistry<C extends MessageListenerContainer,
 
 	protected C createListenerContainer(E endpoint, ListenerContainerFactory<? extends C, E> factory) {
 
-		C listenerContainer = factory.createListenerContainer(endpoint);
+		C listenerContainer = factory.createRegisteredContainer(endpoint);
 
 		if (listenerContainer instanceof InitializingBean) {
 			try {
